parser/tests/snapshots/errors__emit_bad_call.snap
---
source: parser/tests/errors.rs
expression: "err_string(parse_emit_statement, true, \"emit MyEvent(1)()\")"

---
error: unexpected token while parsing emit statement
  ┌─ [test snippet]:1:16
  │
1 │ emit MyEvent(1)()
  │                ^ unexpected token
  │
  = expected a newline


